fixed z-index of control bar vs side panel

--- a/src/style.css
+++ b/src/style.css
@@ -226,7 +226,6 @@ body {
   position: absolute;
   top: calc(50% - 37px);
   left: calc(50% - 160px);
-  z-index: 999;
 }
 .submenu-item-active {
   position: relative;
